Squash merge no-container into main